Bug 54943 - [gm45] Spurious detection of VGA
Summary: [gm45] Spurious detection of VGA
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: high normal
Assignee: Daniel Vetter
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-14 20:18 UTC by Chris Wilson
Modified: 2017-07-24 23:00 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Xorg.log (25.06 KB, text/plain)
2012-09-14 20:20 UTC, Chris Wilson
no flags Details
dmesg (100.31 KB, text/plain)
2012-09-14 20:20 UTC, Chris Wilson
no flags Details

Description Chris Wilson 2012-09-14 20:18:36 UTC
Last booted dinq from around 3.6-rc2+, now at 3.6-rc5+ and I have an unexpected VGA.
Comment 1 Chris Wilson 2012-09-14 20:20:18 UTC
Created attachment 67186 [details]
Xorg.log
Comment 2 Chris Wilson 2012-09-14 20:20:39 UTC
Created attachment 67187 [details]
dmesg
Comment 3 Chris Wilson 2012-09-14 20:21:35 UTC
[    1.251393] [drm:drm_helper_probe_single_connector_modes], [CONNECTOR:9:VGA-1]
[    1.264048] [drm:intel_crt_detect], CRT detected via hotplug
[    1.268022] [drm:gmbus_xfer], GMBUS [i915 gmbus vga] NAK for addr: 0050 r(1)
[    1.268027] [drm:drm_do_probe_ddc_edid], drm: skipping non-existent adapter i915 gmbus vga
[    1.268029] [drm:intel_crt_get_edid], CRT GMBUS EDID read failed, retry using GPIO bit-banging
[    1.268285] [drm:drm_do_probe_ddc_edid], drm: skipping non-existent adapter i915 gmbus vga
[    1.305977] [drm:drm_do_probe_ddc_edid], drm: skipping non-existent adapter i915 gmbus dpb
[    1.305994] [drm:drm_helper_probe_single_connector_modes], [CONNECTOR:9:VGA-1] probed modes :
[    1.305997] [drm:drm_mode_debug_printmodeline], Modeline 28:"1024x768" 60 65000 1024 1048 1184 1344 768 771 777 806 0x40 0xa
[    1.306001] [drm:drm_mode_debug_printmodeline], Modeline 26:"800x600" 60 40000 800 840 968 1056 600 601 605 628 0x40 0x5
[    1.306006] [drm:drm_mode_debug_printmodeline], Modeline 25:"800x600" 56 36000 800 824 896 1024 600 601 603 625 0x40 0x5
[    1.306010] [drm:drm_mode_debug_printmodeline], Modeline 27:"848x480" 60 33750 848 864 976 1088 480 486 494 517 0x40 0x5
[    1.306013] [drm:drm_mode_debug_printmodeline], Modeline 24:"640x480" 60 25175 640 656 752 800 480 489 492 525 0x40 0xa
Comment 4 Chris Wilson 2012-09-14 21:09:59 UTC
Last known good: 8c3f929b
Comment 5 Chris Wilson 2012-09-14 22:04:34 UTC
So this looks to be a private commit of mine, so consider this a heads up:

commit 27dacc5fca64c535bffb384400539f381db7ca2f
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Thu Sep 6 14:22:22 2012 +0200

    drm/i915: reorder setup sequence to have irqs for output setup
    
    Otherwise the new&shiny irq-driven gmbus and dp aux code won't work that
    well. Noticed since the dp aux code doesn't have an automatic fallback
    with a timeout (since the hw provides for that already).
    
    Signed-off-by: Daniel Vetter <daniel.vetter@ffwll.ch>
Comment 6 Daniel Vetter 2012-09-17 07:12:37 UTC
I've tried to reproduce on my gm45, but couldn't.

But there's definitely something broken with hpd irq setup after this patch - we set up dev_priv->hotplug_enabled_mask in the output setup functions, but now already set up the hotplug irq _before_ calling those ...
Comment 7 Chris Wilson 2012-12-01 16:49:26 UTC
Works with updated gmbus-irq branch.
Comment 8 Chris Wilson 2012-12-09 19:13:53 UTC
The ghost is back.
Comment 9 Daniel Vetter 2012-12-09 19:16:11 UTC
Patch, this time hopefully for real: https://patchwork.kernel.org/patch/1854161/
Comment 10 Chris Wilson 2012-12-11 22:25:11 UTC
commit 20afbda209d708be66944907966486d0c1331cb8
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Tue Dec 11 14:05:07 2012 +0100

    drm/i915: Fixup hpd irq register setup ordering
    
    For GMCH platforms we set up the hpd irq registers in the irq
    postinstall hook. But since we only enable the irq sources we actually
    need in PORT_HOTPLUG_EN/STATUS, taking dev_priv->hotplug_supported_mask
    into account, no hpd interrupt sources is enabled since


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.